# quadruped-mpc-sim

./: README.md
a1_control/: CMakeLists.txt  package.xml
a1_control/config/: gazebo_a1_mpc.yaml
a1_control/include/a1_control/: ConvexMpc.h  Ekf.h  Filter.h  Params.h  ROSInterface.h  RobotController.h  RobotState.h  Utils.h
a1_control/launch/: a1_ctrl.launch
a1_control/src/: ConvexMpc.cpp  Ekf.cpp  ROSInterface.cpp  RobotController.cpp  Utils.cpp  main.cpp  robot_pos_estimation.cpp
unitree_legged_msgs/: CMakeLists.txt
unitree_legged_msgs/msg/: RobotCmd.msg
unitree_ros/unitree_gazebo/worlds/: stairs.world
